--- a/index.html
+++ b/index.html
@@ -10,172 +10,185 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo link" href="./index.html" target="_parent"
-          >Web
-          <span class="logo-dark-accent">Studio</span>
-        </a>
-        <ul class="list">
-          <li>
-            <a class="nav-item link" href="./index.html" target="_parent"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a class="nav-item link" href="./portfolio.html" target="_parent"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a class="nav-item link" href="" target="_parent">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address-style">
-        <ul class="list">
-          <li>
-            <a class="address-item link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-item link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
+    <div class="container">
+      <header>
+        <nav>
+          <a class="logo link" href="./index.html" target="_parent"
+            >Web
+            <span class="logo-dark-accent">Studio</span>
+          </a>
+          <ul class="list">
+            <li>
+              <a class="nav-item link" href="./index.html" target="_parent"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a class="nav-item link" href="./portfolio.html" target="_parent"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a class="nav-item link" href="" target="_parent">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-style">
+          <ul class="list">
+            <li>
+              <a class="address-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-item link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </header>
+    </div>
     <main>
       <!-- Main section -->
-      <section class="main-section">
-        <h1 class="main-heading">Effective Solutions for Your Business</h1>
-        <button class="blue-button" type="button">Order Service</button>
-      </section>
+      <div class="container">
+        <section class="main-section">
+          <h1 class="main-heading">Effective Solutions for Your Business</h1>
+          <button class="blue-button" type="button">Order Service</button>
+        </section>
+      </div>
       <!-- Our benefits section -->
-      <section>
-        <h2 style="visibility: hidden">Our benefits</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-item-heading">Strategy</h3>
-            <p class="section-paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-item-heading">Punctuality</h3>
-            <p class="section-paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-item-heading">Diligence</h3>
-            <p class="section-paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-item-heading">Technologies</h3>
-            <p class="section-paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section>
+          <h2 style="visibility: hidden">Our benefits</h2>
+          <ul class="list">
+            <li>
+              <h3 class="section-item-heading">Strategy</h3>
+              <p class="section-paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-item-heading">Punctuality</h3>
+              <p class="section-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-item-heading">Diligence</h3>
+              <p class="section-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-item-heading">Technologies</h3>
+              <p class="section-paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- What are we doing section-->
-      <section>
-        <h2 class="section-heading capitalize">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/what_we_doing/offer1.jpg"
-              alt="Web site"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what_we_doing/offer2.jpg"
-              alt="Adaptive site"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what_we_doing/offer3.jpg"
-              alt="Mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section>
+          <h2 class="section-heading capitalize">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/what_we_doing/offer1.jpg"
+                alt="Web site"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/what_we_doing/offer2.jpg"
+                alt="Adaptive site"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/what_we_doing/offer3.jpg"
+                alt="Mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- Our team section -->
-      <section class="section-fone">
-        <h2 class="section-heading capitalize">Our Team</h2>
-        <ul class="list">
-          <li class="bgr-white">
-            <img
-              src="./images/team/teammate1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-item-heading">Mark Guerrero</h3>
-            <p class="section-paragraph">Product Designer</p>
-          </li>
-          <li class="bgr-white">
-            <img
-              src="./images/team/teammate2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-item-heading">Tom Ford</h3>
-            <p class="section-paragraph">Frontend Developer</p>
-          </li>
-          <li class="bgr-white">
-            <img
-              src="./images/team/teammate3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-item-heading">Camila Garcia</h3>
-            <p class="section-paragraph">Marketing</p>
-          </li>
-          <li class="bgr-white">
-            <img
-              src="./images/team/teammate4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-item-heading">Daniel Wilson</h3>
-            <p class="section-paragraph">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="section-fone">
+          <h2 class="section-heading capitalize">Our Team</h2>
+          <ul class="list">
+            <li class="bgr-white">
+              <img
+                src="./images/team/teammate1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-item-heading">Mark Guerrero</h3>
+              <p class="section-paragraph">Product Designer</p>
+            </li>
+            <li class="bgr-white">
+              <img
+                src="./images/team/teammate2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-item-heading">Tom Ford</h3>
+              <p class="section-paragraph">Frontend Developer</p>
+            </li>
+            <li class="bgr-white">
+              <img
+                src="./images/team/teammate3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-item-heading">Camila Garcia</h3>
+              <p class="section-paragraph">Marketing</p>
+            </li>
+            <li class="bgr-white">
+              <img
+                src="./images/team/teammate4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="section-item-heading">Daniel Wilson</h3>
+              <p class="section-paragraph">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
-    <footer class="page-footer">
-      <a class="logo link" href="./index.html" target="_parent"
-        >Web
-        <span class="logo-lignt-accent">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <div class="container">
+      <footer class="page-footer">
+        <a class="logo link" href="./index.html" target="_parent"
+          >Web
+          <span class="logo-lignt-accent">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
