--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -52,7 +53,7 @@
     </header>
     <main>
       <section>
-        <h1 class="hiden-element">Portfolio</h1>
+        <h1 class="visually-hidden">Portfolio</h1>
         <ul class="list">
           <li><button class="button" type="button">All</button></li>
           <li>
