--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <nav>
-          <a class="logo link" href="./index.html" target="_parent"
+    <header class="page-header">
+      <div class="container flex-container">
+        <nav class="nav-container">
+          <a class="logo link header-logo" href="./index.html" target="_parent"
             >Web
             <span class="logo-dark-accent">Studio</span>
           </a>
-          <ul class="list">
-            <li>
+          <ul class="list page-menu">
+            <li class="menu-item">
               <a class="nav-item link" href="./index.html" target="_parent"
                 >Studio</a
               >
             </li>
-            <li>
+            <li class="menu-item">
               <a class="nav-item link" href="./portfolio.html" target="_parent"
                 >Portfolio</a
               >
             </li>
-            <li>
+            <li class="menu-item">
               <a class="nav-item link" href="" target="_parent">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address-style">
-          <ul class="list">
+          <ul class="list address-list">
             <li>
               <a class="address-item link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -51,16 +51,16 @@
             </li>
           </ul>
         </address>
-      </header>
-    </div>
+      </div>
+    </header>
     <main>
       <!-- Main section -->
-      <div class="container">
-        <section class="main-section">
+      <section class="main-section">
+        <div class="container">
           <h1 class="main-heading">Effective Solutions for Your Business</h1>
           <button class="blue-button" type="button">Order Service</button>
-        </section>
-      </div>
+        </div>
+      </section>
       <!-- Our benefits section -->
       <div class="container">
         <section>
@@ -178,8 +178,8 @@
         </section>
       </div>
     </main>
-    <div class="container">
-      <footer class="page-footer">
+    <footer class="page-footer">
+      <div class="container">
         <a class="logo link" href="./index.html" target="_parent"
           >Web
           <span class="logo-lignt-accent">Studio</span>
@@ -188,7 +188,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
