--- a/portfolio.html
+++ b/portfolio.html
@@ -10,46 +10,48 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo link" href="./index.html" target="_parent"
-          >Web
-          <span class="logo-dark-accent">Studio</span>
-        </a>
-        <ul class="list">
-          <li>
-            <a class="nav-item link" href="./index.html" target="_parent"
-              >Studio</a
-            >
-          </li>
-          <li>
-            <a class="nav-item link" href="./portfolio.html" target="_parent"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a class="nav-item link" href="" target="_parent">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address-style">
-        <ul class="list">
-          <li>
-            <a class="address-item link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-item link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container flex-container">
+        <nav class="nav-container">
+          <a class="logo link header-logo" href="./index.html" target="_parent"
+            >Web
+            <span class="logo-dark-accent">Studio</span>
+          </a>
+          <ul class="list page-menu">
+            <li class="menu-item">
+              <a class="nav-item link" href="./index.html" target="_parent"
+                >Studio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="nav-item link" href="./portfolio.html" target="_parent"
+                >Portfolio</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="nav-item link" href="" target="_parent">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-style">
+          <ul class="list address-list">
+            <li>
+              <a class="address-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-item link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section>
@@ -182,14 +184,16 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo link" href="./index.html" target="_parent"
-        >Web
-        <span class="logo-lignt-accent">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo link" href="./index.html" target="_parent"
+          >Web
+          <span class="logo-lignt-accent">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
