--- a/index.html
+++ b/index.html
@@ -15,39 +15,35 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container flex-container">
-        <nav class="nav-container">
-          <a class="logo link header-logo" href="./index.html" target="_parent"
+      <div class="container">
+        <nav class="nav-section">
+          <a class="logo link" href="./index.html" target="_parent"
             >Web
-            <span class="logo-dark-accent">Studio</span>
+            <span class="logo-accent">Studio</span>
           </a>
-          <ul class="list page-menu">
-            <li class="menu-item">
-              <a class="nav-item link" href="./index.html" target="_parent"
-                >Studio</a
-              >
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="./index.html" target="_parent">Studio</a>
             </li>
-            <li class="menu-item">
-              <a class="nav-item link" href="./portfolio.html" target="_parent"
+            <li class="item">
+              <a class="link" href="./portfolio.html" target="_parent"
                 >Portfolio</a
               >
             </li>
-            <li class="menu-item">
-              <a class="nav-item link" href="" target="_parent">Contacts</a>
+            <li class="item">
+              <a class="link" href="" target="_parent">Contacts</a>
             </li>
           </ul>
         </nav>
-        <address class="address-style">
-          <ul class="list address-list">
+        <address class="address-section">
+          <ul class="list">
             <li>
-              <a class="address-item link" href="mailto:info@devstudio.com"
+              <a class="link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="address-item link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -57,52 +53,52 @@
       <!-- Main section -->
       <section class="main-section">
         <div class="container">
-          <h1 class="main-heading">Effective Solutions for Your Business</h1>
-          <button class="blue-button" type="button">Order Service</button>
+          <h1 class="first-heading">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
         </div>
       </section>
       <!-- Our benefits section -->
-      <div class="container">
-        <section>
-          <h2 style="visibility: hidden">Our benefits</h2>
+      <section class="benefits-section">
+        <div class="container">
+          <h2 class="visually-hidden">Our benefits</h2>
           <ul class="list">
-            <li>
-              <h3 class="section-item-heading">Strategy</h3>
-              <p class="section-paragraph">
+            <li class="item">
+              <h3 class="heading">Strategy</h3>
+              <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
-              <h3 class="section-item-heading">Punctuality</h3>
-              <p class="section-paragraph">
+            <li class="item">
+              <h3 class="heading">Punctuality</h3>
+              <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
-              <h3 class="section-item-heading">Diligence</h3>
-              <p class="section-paragraph">
+            <li class="item">
+              <h3 class="heading">Diligence</h3>
+              <p class="paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
-              <h3 class="section-item-heading">Technologies</h3>
-              <p class="section-paragraph">
+            <li class="item">
+              <h3 class="heading">Technologies</h3>
+              <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <!-- What are we doing section-->
-      <div class="container">
-        <section>
-          <h2 class="section-heading capitalize">What are we doing</h2>
+      <section class="doing-section">
+        <div class="container">
+          <h2 class="second-heading">What are we doing</h2>
           <ul class="list">
-            <li>
+            <li class="item">
               <img
                 src="./images/what_we_doing/offer1.jpg"
                 alt="Web site"
@@ -110,7 +106,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/what_we_doing/offer2.jpg"
                 alt="Adaptive site"
@@ -118,7 +114,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/what_we_doing/offer3.jpg"
                 alt="Mobile app"
@@ -127,64 +123,72 @@
               />
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <!-- Our team section -->
-      <div class="container">
-        <section class="section-fone">
-          <h2 class="section-heading capitalize">Our Team</h2>
+      <section class="team-section">
+        <div class="container">
+          <h2 class="second-heading">Our Team</h2>
           <ul class="list">
-            <li class="bgr-white">
+            <li class="item">
               <img
                 src="./images/team/teammate1.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
-              <h3 class="section-item-heading">Mark Guerrero</h3>
-              <p class="section-paragraph">Product Designer</p>
+              <div class="text-container">
+                <h3 class="thitd-heading">Mark Guerrero</h3>
+                <p class="section-paragraph paragraph">Product Designer</p>
+              </div>
             </li>
-            <li class="bgr-white">
+            <li class="item">
               <img
                 src="./images/team/teammate2.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
               />
-              <h3 class="section-item-heading">Tom Ford</h3>
-              <p class="section-paragraph">Frontend Developer</p>
+              <div class="text-container">
+                <h3 class="thitd-heading">Tom Ford</h3>
+                <p class="section-paragraph paragraph">Frontend Developer</p>
+              </div>
             </li>
-            <li class="bgr-white">
+            <li class="item">
               <img
                 src="./images/team/teammate3.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
               />
-              <h3 class="section-item-heading">Camila Garcia</h3>
-              <p class="section-paragraph">Marketing</p>
+              <div class="text-container">
+                <h3 class="thitd-heading">Camila Garcia</h3>
+                <p class="section-paragraph paragraph">Marketing</p>
+              </div>
             </li>
-            <li class="bgr-white">
+            <li class="item">
               <img
                 src="./images/team/teammate4.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
               />
-              <h3 class="section-item-heading">Daniel Wilson</h3>
-              <p class="section-paragraph">UI Designer</p>
+              <div class="text-container">
+                <h3 class="thitd-heading">Daniel Wilson</h3>
+                <p class="section-paragraph paragraph">UI Designer</p>
+              </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="container">
         <a class="logo link" href="./index.html" target="_parent"
           >Web
-          <span class="logo-lignt-accent">Studio</span>
+          <span class="logo-accent">Studio</span>
         </a>
-        <p class="footer-text">
+        <p class="paragraph">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
