--- a/portfolio.html
+++ b/portfolio.html
@@ -193,7 +193,7 @@
                   height="300"
                 />
                 <div class="text-container">
-                  <h2 class="section-item-heading">Fresh Coffee</h2>
+                  <h2 class="thitd-heading">Fresh Coffee</h2>
                   <p class="paragraph">Web Site</p>
                 </div>
               </a>
