--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="page-header">
       <div class="container">
         <nav class="nav-section">
-          <a class="logo link" href="./index.html" target="_parent"
-            >Web
-            <span class="logo-accent">Studio</span>
+          <a class="logo link" href="./index.html" target="_parent">
+            <span class="general">Web</span>
+            <span class="accent">Studio</span>
           </a>
           <ul class="list">
             <li class="item">
@@ -63,28 +63,28 @@
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="list">
             <li class="item">
-              <h3 class="heading">Strategy</h3>
+              <h3 class="thitd-heading">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="item">
-              <h3 class="heading">Punctuality</h3>
+              <h3 class="thitd-heading">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="item">
-              <h3 class="heading">Diligence</h3>
+              <h3 class="thitd-heading">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="item">
-              <h3 class="heading">Technologies</h3>
+              <h3 class="thitd-heading">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -184,9 +184,9 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="logo link" href="./index.html" target="_parent"
-          >Web
-          <span class="logo-accent">Studio</span>
+        <a class="logo link" href="./index.html" target="_parent">
+          <span class="general">Web</span>
+          <span class="accent">Studio</span>
         </a>
         <p class="paragraph">
           Increase the flow of customers and sales for your business with
