--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
     <header class="page-header">
       <div class="container">
         <nav class="nav-section">
-          <a class="logo link" href="./index.html" target="_parent"
-            >Web
-            <span class="logo-accent">Studio</span>
+          <a class="logo link" href="./index.html" target="_parent">
+            <span class="general">Web</span>
+            <span class="accent">Studio</span>
           </a>
           <ul class="list">
             <li class="item">
@@ -204,9 +204,9 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="logo link" href="./index.html" target="_parent"
-          >Web
-          <span class="logo-accent">Studio</span>
+        <a class="logo link" href="./index.html" target="_parent">
+          <span class="general">Web</span>
+          <span class="accent">Studio</span>
         </a>
         <p class="paragraph">
           Increase the flow of customers and sales for your business with
